src/test/ui/span/E0072.stderr
error[E0072]: recursive type `ListNode` has infinite size
  --> $DIR/E0072.rs:1:1
   |
LL | struct ListNode {
   | ^^^^^^^^^^^^^^^ recursive type has infinite size
LL |     head: u8,
LL |     tail: Option<ListNode>,
   |           ---------------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `ListNode` representable
   |
LL |     tail: Box<Option<ListNode>>,
   |           ^^^^                ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
